# tom_base

./: .coveragerc  .coveralls.yml  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README-dev.md  README.md  manage.py  photometric_sequence_cadence_testing.ipynb  pyproject.toml  releasenotes.md  requirements.txt  setup.py  spectroscopic_sequence_cadence_testing.ipynb  test_attempt.py  test_settings.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  sprint-story.md
.github/workflows/: github-release.yml  github_review.yml  publish-dev.yml  pypi-release.yml  release.yml  run-canary-tests.yml  run-tests.yml
bhtom_alerts/: admin.py  alerts.py  apps.py  urls.py  views.py
bhtom_alerts/brokers/: alerce.py  antares.py  fink.py  lasair.py  mars.py  scimma.py  scout.py  tns.py
bhtom_alerts/migrations/: 0002_auto_20190626_2135.py  0003_auto_20190701_2226.py  0004_auto_20210204_2300.py
bhtom_alerts/templatetags/: alerts_extras.py
bhtom_alerts/tests/: tests.py
bhtom_base/: settings.py  wsgi.py
bhtom_catalogs/: apps.py  forms.py  harvester.py  urls.py  views.py
bhtom_catalogs/harvesters/: jplhorizons.py  mpc.py  ned.py  simbad.py  tns.py
bhtom_catalogs/tests/: tests.py
bhtom_common/: api_router.py  api_views.py  apps.py  exceptions.py  forms.py  middleware.py  serializers.py  tests.py  urls.py  views.py
bhtom_common/templatetags/: bhtom_common_extras.py
bhtom_dataproducts/: admin.py  api_views.py  apps.py  data_processor.py  filters.py  forms.py  hooks.py  models.py  serializers.py  urls.py  views.py
bhtom_dataproducts/migrations/: 0001_initial.py  0004_auto_20190626_0904.py  0005_auto_20190704_1010.py  0006_auto_20190912_2013.py  0007_manual_20191016_rename_type.py  0008_auto_20191205_1952.py  0009_auto_20210204_2221.py  0010_manual_20210305_fix_spectroscopy.py  0011_reduceddatum_error_reduceddatum_extra_data_and_more.py  0012_alter_reduceddatum_mjd.py  0013_alter_reduceddatum_facility_alter_reduceddatum_mjd_and_more.py  0014_alter_reduceddatum_mjd.py  0015_alter_reduceddatum_mjd.py  0016_alter_reduceddatum_mjd.py  0017_reduceddatum_value_unit_alter_reduceddatum_mjd.py  0018_remove_reduceddatum_value_unit_and_more.py  0019_alter_reduceddatum_mjd.py  0020_alter_reduceddatum_mjd.py  0021_alter_reduceddatum_mjd.py  0022_reduceddatum_value_unit_alter_reduceddatum_mjd.py  0023_alter_reduceddatum_mjd.py  0024_alter_reduceddatum_options_and_more.py
bhtom_dataproducts/processors/: photometry_processor.py  spectroscopy_processor.py
bhtom_dataproducts/templatetags/: dataproduct_extras.py
bhtom_dataproducts/tests/: test_api.py  tests.py
bhtom_observations/: admin.py  api_views.py  apps.py  cadence.py  facility.py  forms.py  models.py  observation_template.py  serializers.py  urls.py  utils.py  views.py  widgets.py
bhtom_observations/cadences/: resume_cadence_after_failure.py  retry_failed_observations.py
bhtom_observations/facilities/: gemini.py  lco.py  lt.py  manual.py  soar.py
bhtom_observations/migrations/: 0001_initial.py  0002_auto_20190306_2343.py  0003_auto_20190503_2318.py  0004_observationgroup.py  0005_auto_20191210_0007.py  0006_observationgroup_cadence_strategy.py  0007_observationstrategy.py  0008_observationgroup_cadence_parameters.py  0009_observationrecord_user.py  0010_manual_create_dynamic_cadence.py  0011_auto_20200917_0306.py  0012_auto_20210205_1819.py  0013_proposal.py  0013_proposal_proposal_check_active_dates.py  0014_alter_proposal_facilities.py  0014_alter_proposal_options_proposal_active_from_and_more.py  0015_observationrecord_proposal.py
bhtom_observations/templatetags/: observation_extras.py
bhtom_setup/: apps.py
bhtom_targets/: __init__.py  admin.py  api_views.py  apps.py  filters.py  forms.py  groups.py  models.py  serializers.py  urls.py  utils.py  views.py
docs/: =5  about.md  conf.py  contributing.md  examples.md  examples.rst  index.rst  modules.rst  releasenotes.md  requirements.txt  support.md
templates/: base.html  index.html
tom_alerts/: admin.py  alerts.py  apps.py  exceptions.py  models.py  tests.py  urls.py  views.py  widgets.py
tom_async_demo/: apps.py  urls.py  views.py
tom_base/: __init__.py  settings.py  settings.py.bak  template_tags.py  urls.py  wsgi.py
tom_calendar/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
tom_catalogs/: apps.py  forms.py  harvester.py  tests.py  urls.py  views.py
tom_common/: admin.py  api_router.py  api_views.py  app_config_utils.py  apps.py  calendar.py  default_settings.py  encryption.py  exceptions.py  forms.py  hints.py  hooks.py  htmx_table.py  middleware.py  mixins.py  models.py  session_utils.py  sharing.py  signals.py  test_sharing.py  tests.py  urls.py  utils.py  views.py
tom_dataproducts/: admin.py  api_urls.py  api_views.py  apps.py  data_processor copy.py  data_processor.py  data_serializers.py  fields.py  filters.py  forms.py  hermes.py  hooks.py  models.py  serializers.py  sharing.py  tasks.py  tests.py  urls.py  utils.py  views.py  widgets.py
tom_dataservices/: apps.py  dataservices.py  forms.py  models.py  urls.py  views.py
tom_observations/: LCO_obs_locs.py  admin.py  api_views.py  apps.py  cadence.py  facility.py  forms.py  models.py  moon_separation.py  observation_template.py  observing_strategy.py  pydantic_forms.py  rise_set.py  serializers.py  singletarget_vis.py  strategy.py  urls.py  utils.py  views.py  widgets.py
tom_publications/: admin.py  apps.py  forms.py  latex.py  models.py  urls.py  views.py
tom_reduced_data/: apps.py  models.py  urls.py  views.py
tom_registration/: apps.py  forms.py  tests.py  urls.py  views.py
tom_setup/: apps.py
tom_targets/: __init__.py  add_remove_from_grouping.py  admin.py  api_urls.py  api_views.py  apps.py  base_models.py  export_targets.py  fields.py  filters.py  forms.py  groups.py  import_targets.py  merge.py  models.py  permissions.py  persistent_sharing_serializers.py  seed.py  serializers.py  sharing.py  signals.py  tables.py  urls.py  utils.py  validators.py  views.py  viewsets.py
(+800 files in other folders)
